--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,10 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
+
+FONNTE_TOKEN=
+
+DB_CONNECTION=mysql
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
